# s3cli

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/commands/: common_prefix.rs  copy.rs  du.rs  list.rs  make_profile.rs  mod.rs
src/error/: mod.rs
src/fs/: mod.rs
src/s3/: bucket.rs  content.rs  credentials.rs  mod.rs  profile.rs
src/s3/bucket/: mod.rs  output.rs
src/s3easy/: mod.rs
src/utils/validator/: mod.rs
src/validator/: mod.rs
